--- a/person.html
+++ b/person.html
@@ -347,9 +347,9 @@
               </div>
               <div class="right">
                 <span class="edit-content">
-                  <span class="label">
+                  <!-- <span class="label">
                     <span>סטטוס</span>
-                  </span>
+                  </span> -->
                   <span class="edit-field">
                     <span class="value-text">
                       <span class="material-symbols-outlined green-circle">
