--- a/task.html
+++ b/task.html
@@ -307,20 +307,29 @@
                 </div>
               </div>
               <div class="right">
-                <div class="flex-container">
-                  <div class="filter-tag green">
-                    <span>תכנון</span>
-                    <span class="material-symbols-outlined">
-                      arrow_drop_down
-                    </span>
-                  </div>
-                  <div class="filter-tag clicked">
-                    <span>12/02/24</span>
-                    <span class="material-symbols-outlined">
-                      arrow_drop_down
-                    </span>
-                  </div>
-                </div>
+                <span class="edit-content">
+                  <!-- <span class="label">
+                    <span>סטטוס</span>
+                  </span> -->
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined green-circle">
+                        circle
+                      </span>
+                      תכנון</span
+                    >
+                    <span class="material-symbols-outlined"> expand_more </span>
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="label">
+                    <span>לטיפול</span>
+                  </span>
+                  <span class="edit-field">
+                    <span class="value-text">14/08/24</span>
+                    <span class="material-symbols-outlined"> expand_more </span>
+                  </span>
+                </span>
               </div>
             </div>
           </div>
