--- a/task.html
+++ b/task.html
@@ -320,7 +320,9 @@
                     >
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
+                  <div class="edit-content-menu"></div>
                 </span>
+
                 <span class="edit-content">
                   <span class="label">
                     <span>לטיפול</span>
