--- a/task.html
+++ b/task.html
@@ -307,7 +307,7 @@
                 </div>
               </div>
               <div class="right">
-                <span class="edit-content">
+                <span class="edit-content green">
                   <!-- <span class="label">
                     <span>סטטוס</span>
                   </span> -->
@@ -320,13 +320,13 @@
                     >
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
-                  <div class="edit-content-menu"></div>
+                  <!-- <div class="edit-content-menu"></div> -->
                 </span>
 
                 <span class="edit-content">
-                  <span class="label">
+                  <!-- <span class="label">
                     <span>לטיפול</span>
-                  </span>
+                  </span> -->
                   <span class="edit-field">
                     <span class="value-text">14/08/24</span>
                     <span class="material-symbols-outlined"> expand_more </span>
