--- a/task.html
+++ b/task.html
@@ -307,44 +307,52 @@
                 </div>
               </div>
               <div class="right">
-                <span class="edit-content green">
-                  <!-- <span class="label">
-                    <span>סטטוס</span>
-                  </span> -->
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined green-circle">
-                        circle
+                <div class="header-fields">
+                  <span class="edit-content green">
+                    <!-- <span class="label">
+                      <span>סטטוס</span>
+                    </span> -->
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined green-circle">
+                          circle
+                        </span>
+                        תכנון</span
+                      >
+                      <span class="material-symbols-outlined">
+                        expand_more
                       </span>
-                      תכנון</span
-                    >
-                    <span class="material-symbols-outlined"> expand_more </span>
+                    </span>
+                    <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <!-- <div class="edit-content-menu"></div> -->
-                </span>
 
-                <span class="edit-content">
-                  <!-- <span class="label">
-                    <span>לטיפול</span>
-                  </span> -->
-                  <span class="edit-field">
-                    <span class="value-text">14/08/24</span>
-                    <span class="material-symbols-outlined"> expand_more </span>
+                  <span class="edit-content">
+                    <!-- <span class="label">
+                      <span>לטיפול</span>
+                    </span> -->
+                    <span class="edit-field">
+                      <span class="value-text">14/08/24</span>
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
                   </span>
-                </span>
+                </div>
+
+                <div class="tags">
+                  <div class="small-chip neutral">
+                    <span class="material-symbols-outlined btn-default">
+                      add
+                    </span>
+                    <span>תגית</span>
+                  </div>
+                  <div>
+                    <span class="material-symbols-outlined btn-default">
+                      more_vert
+                    </span>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-
-          <div class="tags">
-            <div class="small-chip neutral">
-              <span class="material-symbols-outlined btn-default"> add </span>
-              <span>תגית</span>
-            </div>
-            <div>
-              <span class="material-symbols-outlined btn-default">
-                more_vert
-              </span>
             </div>
           </div>
 
