--- a/task.html
+++ b/task.html
@@ -314,9 +314,9 @@
                     </span> -->
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined green-circle">
+                        <!-- <span class="material-symbols-outlined green-circle">
                           circle
-                        </span>
+                        </span> -->
                         תכנון</span
                       >
                       <span class="material-symbols-outlined">
@@ -326,7 +326,7 @@
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
 
-                  <span class="edit-content">
+                  <span class="edit-content transparent">
                     <!-- <span class="label">
                       <span>לטיפול</span>
                     </span> -->
@@ -338,19 +338,25 @@
                     </span>
                   </span>
                 </div>
-
-                <div class="tags">
-                  <div class="small-chip neutral">
-                    <span class="material-symbols-outlined btn-default">
-                      add
+                <div class="header-fields">
+                  <span class="edit-content red">
+                    <!-- <span class="label">
+                      <span>סטטוס</span>
+                    </span> -->
+                    <span class="edit-field">
+                      <span class="value-text"> חשוב מאוד</span>
                     </span>
-                    <span>תגית</span>
-                  </div>
-                  <div>
-                    <span class="material-symbols-outlined btn-default">
-                      more_vert
+                    <!-- <div class="edit-content-menu"></div> -->
+                  </span>
+                  <span class="edit-content yellow">
+                    <!-- <span class="label">
+                      <span>סטטוס</span>
+                    </span> -->
+                    <span class="edit-field">
+                      <span class="value-text">אירוע אבטחת מידע</span>
                     </span>
-                  </div>
+                    <!-- <div class="edit-content-menu"></div> -->
+                  </span>
                 </div>
               </div>
             </div>
