--- a/task.html
+++ b/task.html
@@ -327,9 +327,9 @@
                   </span>
 
                   <span class="edit-content transparent">
-                    <!-- <span class="label">
+                    <span class="label">
                       <span>לטיפול</span>
-                    </span> -->
+                    </span>
                     <span class="edit-field">
                       <span class="value-text">14/08/24</span>
                       <span class="material-symbols-outlined">
