--- a/task.html
+++ b/task.html
@@ -314,9 +314,9 @@
                     </span> -->
                     <span class="edit-field">
                       <span class="value-text">
-                        <!-- <span class="material-symbols-outlined green-circle">
+                        <span class="material-symbols-outlined green-circle">
                           circle
-                        </span> -->
+                        </span>
                         תכנון</span
                       >
                       <span class="material-symbols-outlined">
