--- a/task.html
+++ b/task.html
@@ -337,6 +337,9 @@
                       </span>
                     </span>
                   </span>
+                  <span class="material-symbols-outlined add-circle">
+                    add_circle
+                  </span>
                 </div>
                 <div class="header-fields">
                   <span class="edit-content red">
@@ -356,6 +359,32 @@
                       <span class="value-text">אירוע אבטחת מידע</span>
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
+                  </span>
+                  <span class="material-symbols-outlined add-circle">
+                    add_circle
+                  </span>
+                </div>
+                <div class="header-fields">
+                  <span class="edit-content red">
+                    <!-- <span class="label">
+                      <span>סטטוס</span>
+                    </span> -->
+                    <span class="edit-field">
+                      <span class="value-text"> תלמיד</span>
+                    </span>
+                    <!-- <div class="edit-content-menu"></div> -->
+                  </span>
+                  <span class="edit-content yellow">
+                    <!-- <span class="label">
+                      <span>סטטוס</span>
+                    </span> -->
+                    <span class="edit-field">
+                      <span class="value-text">מלגה</span>
+                    </span>
+                    <!-- <div class="edit-content-menu"></div> -->
+                  </span>
+                  <span class="material-symbols-outlined add-circle">
+                    add_circle
                   </span>
                 </div>
               </div>
