--- a/task.html
+++ b/task.html
@@ -365,21 +365,17 @@
                   </span>
                 </div>
                 <div class="header-fields">
-                  <span class="edit-content red">
+                  <span class="edit-content">
                     <!-- <span class="label">
                       <span>סטטוס</span>
                     </span> -->
                     <span class="edit-field">
-                      <span class="value-text"> תלמיד</span>
-                    </span>
-                    <!-- <div class="edit-content-menu"></div> -->
-                  </span>
-                  <span class="edit-content yellow">
-                    <!-- <span class="label">
-                      <span>סטטוס</span>
-                    </span> -->
-                    <span class="edit-field">
-                      <span class="value-text">מלגה</span>
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          analytics
+                        </span>
+                        מרצה</span
+                      >
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
