--- a/task.html
+++ b/task.html
@@ -365,7 +365,7 @@
                   </span>
                 </div>
                 <div class="header-fields">
-                  <span class="edit-content">
+                  <span class="edit-content blue">
                     <!-- <span class="label">
                       <span>סטטוס</span>
                     </span> -->
