--- a/task.html
+++ b/task.html
@@ -383,6 +383,28 @@
                     add_circle
                   </span>
                 </div>
+                <div class="header-fields">
+                  <span class="edit-content gray">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          create_new_folder
+                        </span>
+                      </span>
+                    </span>
+                  </span>
+                </div>
+                <div class="header-fields">
+                  <span class="edit-content gray">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          add_triangle
+                        </span>
+                      </span>
+                    </span>
+                  </span>
+                </div>
               </div>
             </div>
           </div>
