--- a/task.html
+++ b/task.html
@@ -383,7 +383,7 @@
                     add_circle
                   </span>
                 </div>
-                <div class="header-fields">
+                <div class="header-fields active">
                   <span class="edit-content gray">
                     <span class="edit-field">
                       <span class="value-text">
@@ -394,7 +394,7 @@
                     </span>
                   </span>
                 </div>
-                <div class="header-fields">
+                <div class="header-fields active">
                   <span class="edit-content gray">
                     <span class="edit-field">
                       <span class="value-text">
