--- a/task.html
+++ b/task.html
@@ -379,6 +379,21 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
+                  <span class="edit-content blue">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          analytics
+                        </span>
+                        חפש תגית...</span
+                      >
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </span>
+
+                    <!-- <div class="edit-content-menu"></div> -->
+                  </span>
                   <span class="material-symbols-outlined add-circle">
                     add_circle
                   </span>
