--- a/task.html
+++ b/task.html
@@ -383,7 +383,7 @@
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
-                          analytics
+                          new_label
                         </span>
                         חפש תגית...</span
                       >
