--- a/task.html
+++ b/task.html
@@ -365,7 +365,7 @@
                   </span>
                 </div>
                 <div class="header-fields">
-                  <span class="edit-content blue">
+                  <span class="edit-content blue active">
                     <!-- <span class="label">
                       <span>סטטוס</span>
                     </span> -->
@@ -379,7 +379,7 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <span class="edit-content blue">
+                  <span class="edit-content blue active">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
@@ -394,12 +394,12 @@
 
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <span class="material-symbols-outlined add-circle">
+                  <!-- <span class="material-symbols-outlined add-circle">
                     add_circle
-                  </span>
+                  </span> -->
                 </div>
-                <div class="header-fields active">
-                  <span class="edit-content gray">
+                <div class="header-fields">
+                  <span class="edit-content gray" id="top-menu-example">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
@@ -408,8 +408,27 @@
                       </span>
                     </span>
                   </span>
+                  <span
+                    class="edit-content gray active"
+                    id="top-menu-example-clicked"
+                  >
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span>חפש תגית...</span>
+                        <span class="material-symbols-outlined"> search </span>
+                        <span class="material-symbols-outlined">
+                          arrow_drop_down
+                        </span>
+                      </span>
+                    </span>
+                    <div class="edit-content-menu-up">
+                      <span>חשוב</span>
+                      <span>לטיפול</span>
+                      <span>הערכת ביצועים</span>
+                    </div>
+                  </span>
                 </div>
-                <div class="header-fields active">
+                <div class="header-fields">
                   <span class="edit-content gray">
                     <span class="edit-field">
                       <span class="value-text">
