--- a/task.html
+++ b/task.html
@@ -337,9 +337,6 @@
                       </span>
                     </span>
                   </span>
-                  <span class="material-symbols-outlined add-circle">
-                    add_circle
-                  </span>
                 </div>
                 <div class="header-fields">
                   <span class="edit-content red">
@@ -360,12 +357,9 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <span class="material-symbols-outlined add-circle">
-                    add_circle
-                  </span>
                 </div>
                 <div class="header-fields">
-                  <span class="edit-content blue active">
+                  <span class="edit-content blue">
                     <!-- <span class="label">
                       <span>סטטוס</span>
                     </span> -->
@@ -394,9 +388,6 @@
 
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <!-- <span class="material-symbols-outlined add-circle">
-                    add_circle
-                  </span> -->
                 </div>
                 <div class="header-fields">
                   <span class="edit-content gray" id="top-menu-example">
