--- a/task.html
+++ b/task.html
@@ -296,16 +296,6 @@
 
           <div class="card-header long-header">
             <div class="top">
-              <div class="left" id="left">
-                <div class="title">
-                  <span class="material-symbols-outlined title-icon">
-                    task
-                  </span>
-                  <span id="double-click" ondblclick="handleDoubleClick()"
-                    >יצירת קשר ראשוני</span
-                  >
-                </div>
-              </div>
               <div class="right">
                 <div class="header-fields">
                   <span class="edit-content green">
@@ -394,7 +384,7 @@
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
-                          create_new_folder
+                          new_label
                         </span>
                       </span>
                     </span>
@@ -412,7 +402,7 @@
                         </span>
                       </span>
                     </span>
-                    <div class="edit-content-menu-up">
+                    <div class="edit-content-menu">
                       <span>חשוב</span>
                       <span>לטיפול</span>
                       <span>הערכת ביצועים</span>
@@ -429,6 +419,16 @@
                       </span>
                     </span>
                   </span>
+                </div>
+              </div>
+              <div class="left" id="left">
+                <div class="title">
+                  <span class="material-symbols-outlined title-icon">
+                    task
+                  </span>
+                  <span id="double-click" ondblclick="handleDoubleClick()"
+                    >יצירת קשר ראשוני</span
+                  >
                 </div>
               </div>
             </div>
