--- a/task.html
+++ b/task.html
@@ -299,9 +299,6 @@
               <div class="right">
                 <div class="header-fields">
                   <span class="edit-content green">
-                    <!-- <span class="label">
-                      <span>סטטוס</span>
-                    </span> -->
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined green-circle">
@@ -327,6 +324,15 @@
                       </span>
                     </span>
                   </span>
+                  <span class="edit-content gray add-circle">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          add_triangle
+                        </span>
+                      </span>
+                    </span>
+                  </span>
                 </div>
                 <div class="header-fields">
                   <span class="edit-content red">
@@ -347,6 +353,15 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
+                  <span class="edit-content gray add-circle">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          add_triangle
+                        </span>
+                      </span>
+                    </span>
+                  </span>
                 </div>
                 <div class="header-fields">
                   <span class="edit-content blue">
@@ -363,24 +378,10 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <span class="edit-content blue active">
-                    <span class="edit-field">
-                      <span class="value-text">
-                        <span class="material-symbols-outlined">
-                          new_label
-                        </span>
-                        חפש תגית...</span
-                      >
-                      <span class="material-symbols-outlined">
-                        expand_more
-                      </span>
-                    </span>
-
-                    <!-- <div class="edit-content-menu"></div> -->
-                  </span>
-                </div>
-                <div class="header-fields">
-                  <span class="edit-content gray" id="top-menu-example">
+                  <span
+                    class="edit-content gray add-circle"
+                    id="top-menu-example"
+                  >
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
@@ -407,17 +408,6 @@
                       <span>לטיפול</span>
                       <span>הערכת ביצועים</span>
                     </div>
-                  </span>
-                </div>
-                <div class="header-fields">
-                  <span class="edit-content gray">
-                    <span class="edit-field">
-                      <span class="value-text">
-                        <span class="material-symbols-outlined">
-                          add_triangle
-                        </span>
-                      </span>
-                    </span>
                   </span>
                 </div>
               </div>
