--- a/task.html
+++ b/task.html
@@ -344,10 +344,7 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <span
-                    class="edit-content gray add-circle"
-                    id="top-menu-example"
-                  >
+                  <span class="edit-content gray" id="top-menu-example">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
@@ -391,7 +388,7 @@
                     </span>
                     <!-- <div class="edit-content-menu"></div> -->
                   </span>
-                  <span class="edit-content gray add-circle">
+                  <span class="edit-content gray">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
