--- a/task.html
+++ b/task.html
@@ -102,6 +102,32 @@
               </a>
               <span class="material-symbols-outlined btn-default"> add </span>
             </div>
+            <div class="sidebar-menu">
+              <div class="group">
+                <div class="group-name">כרטיס</div>
+                <div class="group-fields">
+                  <span class="edit-content blue">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> person </span>
+                        איש</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content blue">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        ארגון</span
+                      >
+                    </span>
+                  </span>
+                  <span class="material-symbols-outlined">
+                    arrow_drop_down
+                  </span>
+                </div>
+              </div>
+            </div>
           </li>
 
           <li class="side-nav__content--list__item" id="homeBtn">
