--- a/task.html
+++ b/task.html
@@ -127,6 +127,26 @@
                   </span>
                 </div>
               </div>
+              <div class="group">
+                <div class="group-name">פעולה</div>
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content blue">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          campaign
+                        </span>
+                        קריאה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="material-symbols-outlined">
+                    arrow_drop_down
+                  </span>
+                </div>
+              </div>
             </div>
           </li>
 
