--- a/task.html
+++ b/task.html
@@ -129,6 +129,30 @@
               </div>
               <div class="group">
                 <div class="group-name">פעולה</div>
+                <div class="group-topics">
+                  <div class="topic">
+                    <span class="material-symbols-outlined"> circle </span>
+                    תכנון
+                  </div>
+                  <div class="topic">
+                    <span class="material-symbols-outlined"> circle </span>
+                    תיעוד
+                  </div>
+                </div>
+                <div class="group-fields">
+                  <span class="edit-content blue">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> call </span>
+                        שיחה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content blue">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> task </span>
+                        משימה</span
                       >
                     </span>
                   </span>
