--- a/task.html
+++ b/task.html
@@ -106,7 +106,15 @@
               <div class="group">
                 <div class="group-name">כרטיס</div>
                 <div class="group-fields">
-                  <span class="edit-content blue">
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> person </span>
+                        ליד</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined"> person </span>
@@ -114,7 +122,7 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content blue">
+                  <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined"> domain </span>
@@ -130,7 +138,7 @@
               <div class="group">
                 <div class="group-name">פעולה</div>
                 <div class="group-topics">
-                  <div class="topic">
+                  <div class="topic green-clicked">
                     <span class="material-symbols-outlined"> circle </span>
                     תכנון
                   </div>
@@ -139,8 +147,8 @@
                     תיעוד
                   </div>
                 </div>
-                <div class="group-fields">
-                  <span class="edit-content blue">
+                <div class="group-fields green">
+                  <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined"> call </span>
@@ -148,7 +156,7 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content blue">
+                  <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined"> task </span>
@@ -156,13 +164,45 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content blue">
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> people </span>
+                        פגישה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
                         <span class="material-symbols-outlined">
                           campaign
                         </span>
                         קריאה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="material-symbols-outlined">
+                    arrow_drop_down
+                  </span>
+                </div>
+              </div>
+              <div class="group">
+                <div class="group-name">מכירות</div>
+                <div class="group-fields">
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> person </span>
+                        הצעה</span
+                      >
+                    </span>
+                  </span>
+                  <span class="edit-content">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined"> domain </span>
+                        ארגון</span
                       >
                     </span>
                   </span>
