--- a/task.html
+++ b/task.html
@@ -138,16 +138,16 @@
               <div class="group">
                 <div class="group-name">פעולה</div>
                 <div class="group-topics">
-                  <div class="topic green-clicked">
+                  <div class="topic green-clicked" id="topic-green">
                     <span class="material-symbols-outlined"> circle </span>
                     תכנון
                   </div>
-                  <div class="topic">
+                  <div class="topic" id="topic-blue">
                     <span class="material-symbols-outlined"> circle </span>
                     תיעוד
                   </div>
                 </div>
-                <div class="group-fields green">
+                <div class="group-fields green" id="group-fields">
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
