--- a/task.html
+++ b/task.html
@@ -211,6 +211,10 @@
                   </span>
                 </div>
               </div>
+              <div class="expand-more">
+                <span>עוד</span>
+                <span class="material-symbols-outlined"> more_horiz </span>
+              </div>
             </div>
           </li>
 
