--- a/person.html
+++ b/person.html
@@ -471,7 +471,7 @@
                       close
                     </span>
                     <span
-                      class="material-symbols-outlined btn-default expend-btn"
+                      class="material-symbols-outlined material-symbols-outlined btn-default expend-btn"
                       id="toggleButton"
                     >
                       arrows_more_up
@@ -671,6 +671,9 @@
                   </span>
                   <span>יצחק נהון, ממליץ</span>
                 </div>
+                <span class="material-symbols-outlined btn-default">
+                  expand_content
+                </span>
               </div>
               <div
                 class="card__boxes--box__content active first-extend"
