--- a/person.html
+++ b/person.html
@@ -533,6 +533,17 @@
                             close
                           </span>
                         </div>
+                        <span class="edit-content small">
+                          <span class="label">
+                            <span># שדות</span>
+                          </span>
+                          <span class="edit-field">
+                            <input type="number" placeholder="הקלד מספר..." />
+                            <!-- <span class="material-symbols-outlined">
+                              expand_more
+                            </span> -->
+                          </span>
+                        </span>
                       </div>
                       <div
                         class="local-menu-more-vert push-pin-menu active"
