--- a/task.html
+++ b/task.html
@@ -2629,6 +2629,9 @@
                             </div>
                           </div>
                         </div>
+                        <span class="material-symbols-outlined btn-default">
+                          expand_content
+                        </span>
                       </div>
                     </div>
                     <!-- שלבים-->
