--- a/person.html
+++ b/person.html
@@ -1216,7 +1216,25 @@
                     stop
                   </span>
                   <span>24/08/1989</span>
+                  <span class="material-symbols-outlined stop-icon not-visible">
+                    stop
+                  </span>
+                  <span class="not-visible">יעל סגל</span>
+                  <span class="material-symbols-outlined stop-icon not-visible">
+                    stop
+                  </span>
+                  <span class="not-visible">דוקטור</span>
+                  <span class="material-symbols-outlined stop-icon not-visible">
+                    stop
+                  </span>
+                  <span class="not-visible">24/08/1989</span>
                 </div>
+                <span
+                  class="material-symbols-outlined btn-default"
+                  id="show-more-fields"
+                >
+                  expand_content
+                </span>
               </div>
               <div class="card__boxes--box__content active first-extend">
                 <div class="card__boxes--box__content--fields">
