--- a/task.html
+++ b/task.html
@@ -133,6 +133,42 @@
                   <span class="material-symbols-outlined">
                     arrow_drop_down
                   </span>
+                  <div class="sidebar-menu inner">
+                    <div class="group">
+                      <div class="group-fields">
+                        <span class="edit-content">
+                          <span class="edit-field">
+                            <span class="value-text">
+                              <span class="material-symbols-outlined">
+                                note
+                              </span>
+                              הערה</span
+                            >
+                          </span>
+                        </span>
+                        <span class="edit-content">
+                          <span class="edit-field">
+                            <span class="value-text">
+                              <span class="material-symbols-outlined">
+                                mail
+                              </span>
+                              מייל</span
+                            >
+                          </span>
+                        </span>
+                        <span class="edit-content">
+                          <span class="edit-field">
+                            <span class="value-text">
+                              <span class="material-symbols-outlined">
+                                attach_file
+                              </span>
+                              קובץ</span
+                            >
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="group">
